--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 fastapi==0.100.0
 hypercorn==0.14.4
+httpx>=0.23.0
+apscheduler>=3.9.1
+pydantic>=1.8.2
+python-dotenv>=0.19.0
+pydantic-settings>=2.0.0
